package com.kelvin.filme_note.auth.enums;

public enum Role {
    USER,
    ADMIN
}
