package com.kelvin.filme_note.user.enums;

public enum UserStatus {
    ACTIVE,
    BANNED,
    INACTIVE
}
